--- a/App/app.json
+++ b/App/app.json
@@ -10,7 +10,8 @@
     "splash": {
       "image": "./assets/images/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#ffffff",
+      "width" : "50%"
     },
     "assetBundlePatterns": [
       "**/*"
