--- a/App/app.json
+++ b/App/app.json
@@ -11,7 +11,7 @@
       "image": "./assets/images/splash-icon-test.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff",
-      "width" : "50%"
+      "width" : "100%"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -33,7 +33,12 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-font",
+      {
+        "fonts": ["./assets/fonts/Poppins-Regular.ttf","./assets/fonts/Poppins-Bold.ttf"]
+      }
+      
     ],
     "experiments": {
       "typedRoutes": true
