--- a/App/app.json
+++ b/App/app.json
@@ -36,8 +36,9 @@
       "expo-router",
       "expo-font",
       {
-        "fonts": ["./assets/fonts/Poppins-Regular.ttf","./assets/fonts/Poppins-Bold.ttf"]
+        "fonts" : ["./assets/fonts/Poppins-Regular.ttf"]
       }
+      
       
     ],
     "experiments": {
