--- a/App/app.json
+++ b/App/app.json
@@ -34,9 +34,7 @@
     },
     "plugins": [
       "expo-router",
-      "expo-font",
-      
-      
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
