--- a/App/package.json
+++ b/App/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-community/datetimepicker": "^8.0.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~50.0.8",
     "expo-dev-client": "~3.3.9",
