--- a/App/package.json
+++ b/App/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "^8.0.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~50.0.8",
@@ -27,12 +28,21 @@
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
+    "firebase": "^10.12.1",
+    "firebase-admin": "^12.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-async-storage": "^0.0.1",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-element-dropdown": "^2.12.0",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "react-native-toast-message": "^2.2.0",
+    "react-native-web": "~0.19.6",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
