--- a/App/package.json
+++ b/App/package.json
@@ -28,7 +28,7 @@
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
-    "firebase": "^10.12.1",
+    "firebase": "^10.6.0",
     "firebase-admin": "^12.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -42,6 +42,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.6",
+    "stream": "^0.0.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
