--- a/App/package.json
+++ b/App/package.json
@@ -8,7 +8,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "dev": "APP_VARIANT=development npx expo start"
+    "dev": "APP_VARIANT=development npx expo start",
+    "eas-build-pre-install": "npm config set legacy-peer-deps true"
   },
   "jest": {
     "preset": "jest-expo"
