--- a/App/eas.json
+++ b/App/eas.json
@@ -1,5 +1,6 @@
 {
   "cli" : {
+    "version" : ">=9.0.3",
     "requireCommit": true
   },
   "build" : {
@@ -8,6 +9,9 @@
       "distribution" : "internal"
     },
     "preview" : {
+      "android" : {
+        "buildType" : "apk"
+      },
       "distribution" : "internal"
     },
     "production" : {}
