--- a/App/package.json
+++ b/App/package.json
@@ -1,59 +1,59 @@
 {
-    "name": "app",
-    "main": "expo-router/entry",
-    "version": "1.0.0",
-    "scripts": {
-        "start": "expo start",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
-        "web": "expo start --web",
-        "test": "jest --watchAll",
-        "dev": "APP_VARIANT=development npx expo start"
-    },
-    "jest": {
-        "preset": "jest-expo"
-    },
-    "dependencies": {
-        "@expo/vector-icons": "^14.0.0",
-        "@react-native-async-storage/async-storage": "^1.23.1",
-        "@react-native-community/datetimepicker": "^8.0.1",
-        "@react-navigation/native": "^6.0.2",
-        "expo": "^51.0.9",
-        "expo-dev-client": "~3.3.9",
-        "expo-font": "~11.10.3",
-        "expo-linear-gradient": "~12.7.2",
-        "expo-linking": "~6.2.2",
-        "expo-router": "~3.4.7",
-        "expo-splash-screen": "~0.26.4",
-        "expo-status-bar": "~1.11.1",
-        "expo-system-ui": "~2.9.3",
-        "expo-web-browser": "~12.8.2",
-        "firebase": "^10.6.0",
-        "firebase-admin": "^12.1.1",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "react-native": "0.73.4",
-        "react-native-async-storage": "^0.0.1",
-        "react-native-chart-kit": "^6.12.0",
-        "react-native-element-dropdown": "^2.12.0",
-        "react-native-image-picker": "^7.1.2",
-        "react-native-image-resizer": "^1.4.5",
-        "react-native-safe-area-context": "4.8.2",
-        "react-native-screens": "~3.29.0",
-        "react-native-toast-message": "^2.2.0",
-        "react-native-web": "~0.19.6",
-        "stream": "^0.0.2",
-        "zod": "^3.23.8"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.20.0",
-        "@types/react": "~18.2.45",
-        "@types/react-native-table-component": "^1.2.8",
-        "jest": "^29.2.1",
-        "jest-expo": "~50.0.2",
-        "react-native-table-component": "^1.2.2",
-        "react-test-renderer": "18.2.0",
-        "typescript": "^5.1.3"
-    },
-    "private": true
+  "name": "app",
+  "main": "expo-router/entry",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "test": "jest --watchAll",
+    "dev": "APP_VARIANT=development npx expo start"
+  },
+  "jest": {
+    "preset": "jest-expo"
+  },
+  "dependencies": {
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "^8.0.1",
+    "@react-navigation/native": "^6.0.2",
+    "expo": "^51.0.9",
+    "expo-dev-client": "~4.0.15",
+    "expo-font": "~12.0.6",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.14",
+    "expo-splash-screen": "~0.27.4",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.4",
+    "expo-web-browser": "~13.0.3",
+    "firebase": "^10.6.0",
+    "firebase-admin": "^12.1.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.1",
+    "react-native-async-storage": "^0.0.1",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-element-dropdown": "^2.12.0",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-image-resizer": "^1.4.5",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-toast-message": "^2.2.0",
+    "react-native-web": "~0.19.6",
+    "stream": "^0.0.2",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.45",
+    "@types/react-native-table-component": "^1.2.8",
+    "jest": "^29.2.1",
+    "jest-expo": "~51.0.1",
+    "react-native-table-component": "^1.2.2",
+    "react-test-renderer": "18.2.0",
+    "typescript": "~5.3.3"
+  },
+  "private": true
 }
