--- a/App/eas.json
+++ b/App/eas.json
@@ -10,6 +10,7 @@
     },
     "preview" : {
       "android" : {
+        "node" : "18.17.1",
         "buildType" : "apk"
       },
       "distribution" : "internal"
