--- a/App/package.json
+++ b/App/package.json
@@ -42,6 +42,7 @@
     "react-native-screens": "3.31.1",
     "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.6",
+    "sdk": "^0.0.0",
     "stream": "^0.0.2",
     "zod": "^3.23.8"
   },
